# IRM

./: .gitignore  CMakeLists.txt  README.md
include/: Geometry.hpp  IRM.hpp  IntervalTree.hpp  Utility.hpp
src/: Main.cpp
